--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -5,13 +5,15 @@
     <div class="row justify-content-center mt-5">
       <ul class="row list-unstyled">
         <% for(var i=0; i<posts.length; i++) {%>
+          <h2><%= posts[i].title %></h2>
           <li class="col-6 justify-content-between mt-5">
             <a href="/post/<%= posts[i]._id%>">
               <img class="img-fluid" src="<%= posts[i].image%>">
             </a>
           </li>
+          <h3 class="col-3">Likes: <%= posts[i].likes %></h3>
         <% } %>
-        </ul>
+      </ul>
     </div>
   </div>  
 <%- include('partials/footer') -%>
