--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,3 +246,43 @@ h3 {
     font-size: 1em;
   }
 }
+
+/* HEADER */
+
+.container {
+  animation: flicker 1.5s infinite alternate;
+  color: #fff;
+}
+
+h1 {
+  font-size: 4.2rem;
+}
+
+/* Flickering animation */
+@keyframes flicker {
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #0fa,
+      0 0 80px #0fa, 0 0 90px #0fa, 0 0 100px #0fa, 0 0 150px #0fa;
+  }
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
+  }
+}
+
+/* Additional styling */
+
+h2 {
+  font-size: 1.8rem;
+}
+.container {
+  margin-top: 20vh;
+}
