--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prevezas Network</title>
-    <link
+    <title>Urban Photographer's Network</title>
+    <!-- <link
       rel="icon"
       type="image/png"
       sizes="32x32"
@@ -22,14 +22,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
-    />
+    /> -->
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Prevezas Network</a></h1>
-        <span>Daily News</span>
+        <h1 class=""><a href="/profile">Urban Photographer's Network</a></h1>
+        <span>Daily Dose of Great Street Photography</span>
       </div>
     </header>
   </body>
