--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,9 @@
       <% }) %> <% } %>
       <form class="signUp" action="/signup" method="POST">
         <div>
-          <label class="inputs" for="userName">User Name</label>
+          <label style="color: rgb(37, 10, 10)" class="inputs" for="userName"
+            >User Name</label
+          >
           <input
             type="text"
             class="form-control"
@@ -19,7 +21,12 @@
           />
         </div>
         <div>
-          <label class="inputs" for="exampleInputEmail1">Email address</label>
+          <label
+            style="color: rgb(37, 10, 10)"
+            class="inputs"
+            for="exampleInputEmail1"
+            >Email address</label
+          >
           <input
             type="email"
             class="form-control"
@@ -30,7 +37,9 @@
           <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
         </div>
         <div>
-          <label class="inputs" for="password">Password</label>
+          <label style="color: rgb(37, 10, 10)" class="inputs" for="password"
+            >Password</label
+          >
           <input
             type="password"
             class="form-control"
@@ -39,7 +48,12 @@
           />
         </div>
         <div>
-          <label class="inputs" for="confirmPassword">Confirm Password</label>
+          <label
+            style="color: rgb(37, 10, 10)"
+            class="inputs"
+            for="confirmPassword"
+            >Confirm Password</label
+          >
           <input
             type="password"
             class="form-control"
