--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,21 +100,24 @@ h2 {
   color: black;
   width: 60%;
   margin: auto;
-  background: #bce254;
+  background: #510564;
   padding: 50px 100px;
   border: 2px solid rgba(0, 0, 0, 1);
   box-shadow: 15px 15px 1px #ffa580, 15px 15px 1px 2px rgba(0, 0, 0, 1);
 }
 
 .inputs {
-  color: rgb(0, 0, 0);
   font-family: monospace;
+  text-shadow: 2px black;
   display: block;
   width: 100%;
   border: none;
   min-width: 250px;
   padding-left: 5px;
   outline: none;
+  font-size: 1.2rem;
+  font-weight: 900;
+  color: #2a293e;
 }
 
 .inputs:focus {
@@ -123,8 +126,8 @@ h2 {
 
 button {
   display: block;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin: 10px auto;
+  padding: 20px;
   /* background: black; */
   letter-spacing: 2px;
   transition: 0.2s all ease-in-out;
@@ -152,6 +155,16 @@ input:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-.signUp > label > p {
+/* .signUp > label > p {
+  color: black;
+}
+.signUp > .inputs {
+  color: rgb(0, 0, 0);
+}
+
+.form-control {
+  color: #000;
+} */
+h4 {
   color: black;
 }
