--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,31 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Photographer's Network</title>
-    <!-- <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/imgs/favicon-32x32.png"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    /> -->
+
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header class="container">
       <div class="text-center">
         <h1 class=""><a href="/profile">Urban Photographer's Network</a></h1>
-        <span>Daily Dose of Great Street Photography</span>
+        <h2>Daily Dose of Great Street Photography</h2>
       </div>
     </header>
   </body>
