fixed many styles

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,9 +10,7 @@
       <% }) %> <% } %>
       <form class="signUp" action="/signup" method="POST">
         <div>
-          <label class="inputs" for="userName" class="form-label"
-            >User Name</label
-          >
+          <label class="inputs" for="userName">User Name</label>
           <input
             type="text"
             class="form-control"
@@ -21,9 +19,7 @@
           />
         </div>
         <div>
-          <label class="inputs" for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
+          <label class="inputs" for="exampleInputEmail1">Email address</label>
           <input
             type="email"
             class="form-control"
@@ -34,9 +30,7 @@
           <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
         </div>
         <div>
-          <label class="inputs" for="password" class="form-label"
-            >Password</label
-          >
+          <label class="inputs" for="password">Password</label>
           <input
             type="password"
             class="form-control"
@@ -45,9 +39,7 @@
           />
         </div>
         <div>
-          <label class="inputs" for="confirmPassword" class="form-label"
-            >Confirm Password</label
-          >
+          <label class="inputs" for="confirmPassword">Confirm Password</label>
           <input
             type="password"
             class="form-control"
