--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ body {
 .col-6 {
   align-items: center;
   width: 100%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 /* POST */
@@ -107,14 +107,14 @@ h2 {
 }
 
 .inputs {
+  color: rgb(0, 0, 0);
+  font-family: monospace;
   display: block;
   width: 100%;
   border: none;
   min-width: 250px;
   padding-left: 5px;
   outline: none;
-  color: rgba(0, 0, 0, 1);
-  text-shadow: 2px black;
 }
 
 .inputs:focus {
@@ -152,6 +152,6 @@ input:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-.signUp > label {
+.signUp > label > p {
   color: black;
 }
