--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,13 @@
     <title>Urban Photographer's Network</title>
 
     <link rel="stylesheet" href="/css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="container">
