--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,10 @@ body {
 } */
 .col-6 {
   align-items: center;
-  width: 100%;
+  margin: auto;
+  width: 80%;
+
+  list-style: none;
   /* border: 2px solid red; */
 }
 
@@ -38,6 +41,7 @@ body {
 
 h2 {
   font-size: 2.4rem;
+  margin: auto;
 }
 
 h2,
@@ -159,5 +163,74 @@ input:-webkit-autofill:focus {
   width: 375px;
   font-size: 1.2rem;
   height: 2rem;
-  font-family: "Space Grotesk";
+  font-family: "Space Grotesk", monospace;
+}
+
+.data {
+  float: right;
+}
+
+/* LOGOUT BUTTON */
+.returned {
+  --border: 5px; /* the border width */
+  --color: #37e8fc; /* the color */
+
+  font-size: 1rem;
+  padding: 0.25em 1.2em;
+  cursor: pointer;
+  border: none;
+  font-weight: bold;
+  color: var(--color);
+  box-shadow: 0 0 0 200px inset var(--c, #0000),
+    0 0 0 var(--border) inset var(--color);
+  background: linear-gradient(var(--color) 0 0) bottom/100% 0% no-repeat;
+  transition: color var(--t, 0.3s), background-size 0.3s;
+  position: relative;
+}
+.returned:before,
+.returned:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    calc(100% + 200vmax) 200vmax,
+    200vmax calc(100% + 200vmax),
+    0 100%
+  );
+  box-shadow: 0 0 0 200vmax var(--color);
+  filter: brightness(1.1);
+}
+.returned:after {
+  inset: 0 0 0 auto;
+  filter: brightness(0.9);
+}
+.returned:hover,
+.returned:active {
+  background-size: 100% 100%;
+  color: #fff;
+  --t: 0.2s 0.1s;
+}
+.returned:focus-visible {
+  outline-offset: calc(-1 * var(--border));
+  outline: var(--border) solid #000a;
+}
+.returned:active {
+  --c: #0005;
+  transform: translate(4px, 4px);
+  transition: none;
+}
+
+.dataBox {
+  top: 50px;
+}
+.dataBox > a {
+  --color: #860909; /* the color */
+}
+
+.returned {
+  text-decoration: none;
+  position: fixed;
 }
