--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,24 +2,30 @@
 <div class="container">
   <div class="row mt-5">
       <div class="col-6">
-          <div>
-              <p><strong>User Name</strong>: <%= user.userName %></p>
-              <p><strong>Email</strong>: <%= user.email %></p>
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
+        <div class="data">
+          <div class="dataBox">
+            <p><strong>User Name</strong>: <%= user.userName %></p>
+            <p><strong>Email</strong>: <%= user.email %></p>
+            <a class="returned" href="/logout">Logout</a>
           </div>
-          <div class="mt-5">
+          <br><br><br><br><br><br><br><br><br><br>
+          <div>
+          <a class="returned" href="/feed">Return to Feed</a>
+          </div> 
+        </div>
+        <div class="mt-5">
             <h2>Add a post</h2>
-            <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+            <form class="signUp" action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
-                  <label for="title" class="form-label">Post Title :</label>
+                  <label style="color: rgb(37, 10, 10)" for="title" class="inputs">Post Title :</label>
                   <input type="text" class="form-control" id="title" name="title">
               </div>
               <div class="mb-3">
-                <label for="caption" class="form-label">Description:</label>
+                <label style="color: rgb(37, 10, 10)" for="caption" class="inputs">Description:</label>
                 <textarea class="form-control" id="caption" name="caption"></textarea>
               </div>
               <div class="mb-3">
-                <label for="imgUpload" class="form-label">Image Upload:</label>
+                <label style="color: rgb(37, 10, 10)" for="imgUpload" class="inputs">Image Upload:</label>
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
               <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
