--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,6 @@
-<%- include('partials/header') -%>
-
-<main class="container">
-    <div class="row justify-content-around mt-5">
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
-    </div>
-</main>
-    
-
-<%- include('partials/footer') -%>
+<%- include('partials/header') -%> <%- include('partials/footer') -%>
+<div class="fillBox">
+  <br /><br /><br /><br />
+  <a href="/login" class="fill"> Login</a>
+  <a href="/signup" class="fill"> Signup</a>
+</div>
