--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,10 +176,6 @@ input:-webkit-autofill:focus {
   font-family: "Space Grotesk", monospace;
 }
 
-.data {
-  float: right;
-}
-
 /* LOGOUT BUTTON */
 .returned {
   --border: 5px; /* the border width */
@@ -234,7 +230,10 @@ input:-webkit-autofill:focus {
 }
 
 .dataBox {
-  top: 50px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 4px solid yellow;
 }
 .dataBox > a {
   --color: #860909; /* the color */
