--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,11 +6,14 @@
           <div class="dataBox">
             <p><strong>User Name</strong>: <%= user.userName %></p>
             <p><strong>Email</strong>: <%= user.email %></p>
-            <a class="returned" href="/logout">Logout</a>
+            <div class="lgBtn">
+              <a class="returned" href="/logout">Logout</a>
+              <a class="returned" href="/feed">Return to Feed</a>
+            </div>
+            
           </div>
-          <br><br><br><br><br><br><br><br><br><br>
           <div>
-          <a class="returned" href="/feed">Return to Feed</a>
+          
           </div> 
         </div>
         <div class="mt-5">
