--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,199 @@ body {
   background-color: rgba(0, 0, 255, 0);
 }
 
+html {
+  --u: 1.185vmin;
+  --hue: hue-rotate(0deg);
+  --c1: #ea9ab2;
+  --c2: #eaf2d7;
+  --c3: #b3dee2;
+  --gp: 50% / calc(var(--u) * 12) calc(var(--u) * 17.05);
+  height: 100vh;
+  filter: var(--hue);
+  background: conic-gradient(
+        from 0deg at 13.68% 94.08%,
+        #fff0 0 50%,
+        var(--c2) 0% 83.33%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* left red end */
+      conic-gradient(
+        from 0deg at 86.12% 94.08%,
+        #fff0 0 16.66%,
+        var(--c2) 0% 50%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* right red end */
+      conic-gradient(
+        from 0deg at 28.42% 88.14%,
+        #fff0 0 50%,
+        var(--c1) 0% 83.33%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* left black end */
+      conic-gradient(
+        from 0deg at 71.57% 88.14%,
+        #fff0 0 16.66%,
+        var(--c1) 0% 50%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* right black end */
+      conic-gradient(
+        from 0deg at 7.36% 43.7%,
+        #fff0 0 50%,
+        var(--c1) 0% 75%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* left black vert*/
+      conic-gradient(
+        from 0deg at 92.64% 43.7%,
+        #fff0 0 25%,
+        var(--c1) 0% 50%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* right black vert */
+      conic-gradient(
+        from 0deg at 43.15% 82.22%,
+        #fff0 0 50%,
+        var(--c3) 0% 83.33%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* left orange end */
+      conic-gradient(
+        from 0deg at 56.84% 82.22%,
+        #fff0 0 16.66%,
+        var(--c3) 0% 50%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* right orange end */
+      conic-gradient(
+        from 0deg at 23.15% 50.37%,
+        #fff0 0 50%,
+        var(--c3) 0% 75%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* left orange vert */
+      conic-gradient(
+        from 0deg at 76.85% 50.37%,
+        #fff0 0 25%,
+        var(--c3) 0% 50%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* right orange vert */
+      conic-gradient(
+        from 0deg at 50% 73.33%,
+        #fff0 0 16.66%,
+        var(--c1) 0% 83.33%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* middle black */
+      conic-gradient(
+        from 0deg at 36.84% 56.29%,
+        #fff0 0 50%,
+        var(--c1) 0% 75%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* left black middle */
+      conic-gradient(
+        from 0deg at 63.15% 56.29%,
+        #fff0 0 25%,
+        var(--c1) 0% 50%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* right black middle*/
+      conic-gradient(
+        from 0deg at 50% 51.11%,
+        #fff0 0 33.33%,
+        var(--c2) 0% 66.66%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* middle red */
+      conic-gradient(
+        from 0deg at 50% 39.25%,
+        #fff0 0 33.33%,
+        var(--c1) 0% 66.66%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* middle black */
+      conic-gradient(
+        from 0deg at 50% 26.66%,
+        #fff0 0 33.33%,
+        var(--c3) 0% 66.66%,
+        #fff0 0 100%
+      )
+      var(--gp),
+    /* middle orange */
+      conic-gradient(
+        from 0deg at 13.68% 5.92%,
+        #fff0 0 66.66%,
+        var(--c2) 0% 100%
+      )
+      var(--gp),
+    /* left red top */
+      conic-gradient(
+        from 0deg at 86.12% 5.92%,
+        var(--c2) 0 33.33%,
+        #fff0 0% 100%
+      )
+      var(--gp),
+    /* right red top */
+      conic-gradient(
+        from 0deg at 28.42% 11.85%,
+        #fff0 0 66.66%,
+        var(--c1) 0% 100%
+      )
+      var(--gp),
+    /* left black top */
+      conic-gradient(
+        from 0deg at 71.58% 11.85%,
+        var(--c1) 0 33.33%,
+        #fff0 0% 100%
+      )
+      var(--gp),
+    /* right black top */
+      conic-gradient(
+        from 0deg at 43.15% 17.77%,
+        #fff0 0 66.66%,
+        var(--c3) 0% 100%
+      )
+      var(--gp),
+    /* left orange top */
+      conic-gradient(
+        from 0deg at 56.84% 17.77%,
+        var(--c3) 0 33.33%,
+        #fff0 0% 100%
+      )
+      var(--gp) /* right orange top*/;
+  background-color: var(--c1);
+}
+
+header {
+  --s: 76px; /* control the size */
+
+  --c: #d275df;
+  --_g: conic-gradient(var(--c) 25%, #0000 0) 0 0;
+  background: var(--_g) / calc(2 * var(--s)) calc(var(--s) / 9.5),
+    var(--_g) / calc(var(--s) / 9.5) calc(2 * var(--s)),
+    repeating-conic-gradient(#0000 0 25%, var(--c) 0 50%) var(--s) 0 /
+      calc(2 * var(--s)) calc(2 * var(--s)),
+    radial-gradient(50% 50%, #2eb044 98%, var(--c)) 0 0 / var(--s) var(--s);
+}
+
 /* PROFILE */
 
 .col-6 {
@@ -41,11 +234,6 @@ body {
   position: relative;
   /* background: rgba(131, 184, 166, 0); */
 }
-
-/* .img-fluid {
-  width: 30%;
-  float: left;
-} */
 
 h2 {
   font-size: 2.4rem;
@@ -233,15 +421,15 @@ input:-webkit-autofill:focus {
   position: absolute;
   top: 0;
   right: 0;
-  border: 4px solid yellow;
+  /* border: 4px solid yellow; */
 }
-.dataBox > a {
+.dataBox > a + a {
   --color: #860909; /* the color */
+  margin-top: 70px;
 }
 
 .returned {
   text-decoration: none;
-  margin-left: 50px;
   position: fixed;
 }
 
@@ -284,7 +472,37 @@ input:-webkit-autofill:focus {
 }
 
 .gridBox {
+  width: 100%;
   display: grid;
-  /* column-gap: 50px; */
+  column-gap: 50px;
   grid-template-columns: auto auto auto;
+  list-style: none;
+}
+
+.posted {
+  /* border: 4px solid blue; */
+  background-color: #2a293e52;
+  width: 550px;
+  height: 550px;
+  margin: 15px;
+}
+
+/* .img-fluid {
+  margin: auto;
+  position: relative;
+  width: 580px;
+  max-height: 580px;
+  float: left;
+  list-style: none;
+  margin: 45px;
+} */
+
+.posted > a {
+  width: 100%;
+}
+
+.img-fluid {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
