--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/solid.min.css"
+    />
   </head>
   <body>
     <header class="container">
