--- a/views/post.ejs
+++ b/views/post.ejs
@@ -10,9 +10,11 @@
           action="/post/likePost/<%= post.id %>?_method=PUT"
           method="POST"
         >
-          <button class="btn btn-primary fa fa-heart" type="submit"></button>
+          <button class="buttonLikes" type="submit" <h3 class="likez">Likes: <%= post.likes %></h3>
+            
+          </button>
         </form>
-        <h3 class="col-3">Likes: <%= post.likes %></h3>
+
         <%if(post.user == user.id){ %>
         <form
           action="/post/deletePost/<%= post.id %>?_method=DELETE"
