fixed issues on styles

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') -%>
 <%- include('partials/navbar', {active: "Feed"}); %>
+<a class="fill" href="/profile">Add a Post</a>
   <div class="container">
     <div>
       <ul class="gridBox">
