--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
-<ul class="nav navbar-nav navbar-right">
+<!-- <ul class="nav navbar-nav navbar-right">
     <li><a class='glowing-btn' <%if(active=="Feed"){%>class="active"<%}%> href="/Index"><span class='glowing-txt'>F<span class='faulty-letter'>E</span>ED</span></a></li>
     <li><a class='glowing-btn' <%if(active=="Post"){%>class="active"<%}%> href="/profile"><span class='glowing-txt'>ADD<span class='faulty-letter'> A </span>POST</span></a></li>
-    <!-- <li><a <%if(active=="Work"){%>class="active"<%}%> href="/Work">Work</a></li> -->
-</ul>
+    <li><a <%if(active=="Work"){%>class="active"<%}%> href="/Work">Work</a></li>
+</ul> -->
