--- a/views/post.ejs
+++ b/views/post.ejs
@@ -21,7 +21,7 @@
           method="POST"
           class="col-3"
         >
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
+        <button class="buttonLikes" id="deleto" type="submit" <h3 class="likez">Delete Post</h3>
         </form>
         <%}%>
       </div>
@@ -30,8 +30,9 @@
       <p><%= post.caption %></p>
     </div>
     <div class="col-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
+      <a class="fill" href="/profile">Return to Profile</a>
+      <a class="fill" href="/feed">Return to Feed</a>
+      <br><br><br><br>
     </div>
   </div>
 </div>
