--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
           </div> 
         </div>
         <div class="mt-5">
-            <h2>Add a post</h2>
+            <h2>Add a Post</h2>
             <form class="signUp" action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
                   <label style="color: rgb(37, 10, 10)" for="title" class="inputs">Post Title :</label>
@@ -41,7 +41,7 @@
           <li class="col-6 justify-content-between mt-5">
             <h2> Previous Posts</h2>
             <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
+              <img class="img-fluido" src="<%= posts[i].image%>">
             </a>
           </li>
         <% } %>
