--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,7 +214,10 @@ header {
 .mt-5 > h2 {
   margin: auto;
   align-items: center;
-  margin-left: 185px;
+}
+
+.img-fluido {
+  width: 550px;
 }
 
 .mt-5 {
@@ -523,13 +526,17 @@ input:-webkit-autofill:focus {
   outline: none;
   border: none;
   cursor: pointer;
-  width: 135px;
+  width: 160px;
   height: 50px;
 }
 /* 
 .likez {
   margin: auto;
 } */
+
+#deleto {
+  background: #a80f3d;
+}
 
 .buttonLikes:hover {
   background: rgb(207, 41, 41);
