--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,15 +6,11 @@
           <div class="dataBox">
             <p><strong>User Name</strong>: <%= user.userName %></p>
             <p><strong>Email</strong>: <%= user.email %></p>
-            <div class="lgBtn">
-              <a class="returned" href="/logout">Logout</a>
-              <a class="returned" href="/feed">Return to Feed</a>
-            </div>
-            
           </div>
-          <div>
-          
-          </div> 
+        </div>
+        <div class="fillBox">
+          <a class="fill" href="/logout">Logout</a>
+          <a class="fill" href="/feed">Return to Feed</a>
         </div>
         <div class="mt-5">
             <h2>Add a Post</h2>
