--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/header') -%>
 <%- include('partials/navbar', {active: "Feed"}); %>
-<a class="fill" href="/profile">Add a Post</a>
-  <div class="container">
+<div class="addPost">
+  <a class="fill" href="/profile">Add a Post</a>
+</div>
+<div class="container">
     <div>
       <ul class="gridBox">
         <% for(var i=0; i<posts.length; i++) {%>
