--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,10 +1,14 @@
 <%- include('partials/header') -%>
-<div class="container">
+<div>
   <div class="row justify-content-center mt-5">
-    <div class="col-6">
-      <h2><%= post.title %></h2>
+    <div class="postContainer">
+      
       <img class="img-post" src="<%= post.image%>" />
-      <div class="row justify-content-between">
+      <div>
+        <h2><%= post.title %></h2>
+        <div class="descriptionBox">
+          <p><%= post.caption %></p>
+        </div>
         <form
           class="col-1"
           action="/post/likePost/<%= post.id %>?_method=PUT"
@@ -26,9 +30,7 @@
         <%}%>
       </div>
     </div>
-    <div class="col-3 mt-5">
-      <p><%= post.caption %></p>
-    </div>
+    
     <div class="col-6 mt-5">
       <a class="fill" href="/profile">Return to Profile</a>
       <a class="fill" href="/feed">Return to Feed</a>
