fixed post grid

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,7 +4,7 @@
     <div class="postContainer">
       
       <img class="img-post" src="<%= post.image%>" />
-      <div>
+      <div class="postData">
         <h2><%= post.title %></h2>
         <div class="descriptionBox">
           <p><%= post.caption %></p>
