--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,7 +306,7 @@ h2 {
   margin: auto;
   margin-top: 30px;
   background-color: rgba(137, 43, 226, 0.308);
-  width: 50%;
+  width: 40%;
   height: 600px;
   position: relative;
   display: grid;
@@ -320,7 +320,7 @@ h2 {
 .postContainer::after {
   content: "";
   position: absolute;
-  background-image: linear-gradient(to bottom right, #ff9ec4, #ffd07e);
+  background-image: linear-gradient(to bottom right, #ff9ec593, #ffd07e);
   width: 900px;
   height: 500px;
   /* border-radius: 50%; */
@@ -328,8 +328,24 @@ h2 {
 }
 
 .postContainer > img {
-  width: 60%;
+  width: 80%;
 }
+
+.postData {
+  width: 90%;
+}
+
+.descriptionBox {
+  height: 200px;
+  width: 80%;
+  font-size: 1.4rem;
+}
+
+.descriptionBox > p {
+  font-size: 1.1rem;
+  text-align: justify;
+}
+
 /* SIGN UP */
 
 .signUp {
