--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,11 +7,26 @@
     <title>Urban Photographer's Network</title>
 
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.scss" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
       rel="stylesheet"
     />
 
@@ -23,8 +38,12 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Urban Photographer's Network</a></h1>
-        <h2>Daily Dose of Great Street Photography</h2>
+        <div class="titlu">
+          <img src="/images/bgbg.gif" />
+          <h1 class="cyber-text"><a href="/profile">Pet Galactica</a></h1>
+        </div>
+
+        <h2>Welcome to the hottest pet social network.</h2>
       </div>
     </header>
   </body>
