--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,15 +16,15 @@
             <h2>Add a Post</h2>
             <form class="signUp" action="/post/createPost" enctype="multipart/form-data" method="POST">
               <div class="mb-3">
-                  <label style="color: rgb(37, 10, 10)" for="title" class="inputs">Post Title :</label>
+                  <label for="title" class="inputs">Post Title :</label>
                   <input type="text" class="form-control" id="title" name="title">
               </div>
               <div class="mb-3">
-                <label style="color: rgb(37, 10, 10)" for="caption" class="inputs">Description:</label>
+                <label for="caption" class="inputs">Description:</label>
                 <textarea class="form-control" id="caption" name="caption"></textarea>
               </div>
               <div class="mb-3">
-                <label style="color: rgb(37, 10, 10)" for="imgUpload" class="inputs">Image Upload:</label>
+                <label for="imgUpload" class="inputs">Image Upload:</label>
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
               <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
