styles fix succeeded

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
-<div class="addPost">
-  <a class="fill" href="/profile">Return to Profile</a>
-  <a class="fill" href="/feed">Return to Feed</a>
+<div class="fillBox">
+  <a class="fill" href="/profile">Profile</a>
+  <a class="fill" href="/feed">Feed</a>
   <br><br><br><br>
 </div>
 <div class="container">
