--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Urban Photographer's Network</title>
+    <title>Pet Galactica</title>
 
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/style.scss" />
@@ -30,6 +30,13 @@
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fascinate&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/solid.min.css"
@@ -39,12 +46,18 @@
     <header class="container">
       <div class="text-center">
         <div class="titlu">
-          <img src="/images/bgbg.gif" />
-          <h1 class="cyber-text"><a href="/profile">Pet Galactica</a></h1>
+          <div class="background-img">
+            <div class="space">
+              <div class="stars1"></div>
+              <div class="stars1"></div>
+              <div class="stars1"></div>
+            </div>
+            <!-- <img src="/images/bgbg.gif" /> -->
+          </div>
         </div>
-
-        <h2>Welcome to the hottest pet social network.</h2>
       </div>
+      <h1 class="cyber-text"><a href="/profile">Pet Galactica</a></h1>
+      <h2>Welcome to the hottest Pet Social Network.</h2>
     </header>
   </body>
 </html>
