--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -34,7 +34,7 @@
           </div>
       </div>
       <div class="col-6">
-        <ul class="row list-unstyled">
+        <ul class="postList">
           <% for(var i=0; i<posts.length; i++) {%>
           <li class="col-6 justify-content-between mt-5">
             <h2> Previous Posts</h2>
